[package]
name = "rclisp-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib" ]

[dependencies]
rclisp = { path = "../rclisp" }
wee_alloc = "0.4"
wasm-bindgen = "0.2"
xterm-js-rs = { version = "0.1", features = [ "xterm-addon-fit" ] }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlDivElement',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'EventTarget',
  'MessageEvent',
]
